# planning

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py
.claude/: README.md  routing.md
.claude/prompts/: architecture_review.md  dependency_review.md  realtime_review.md  sil_review.md
.claude/skills/: adapter_patterns.md  cmake_patterns.md  gtest_patterns.md  protobuf_patterns.md  realtime_constraints.md  ros2_adapter_patterns.md
.claude/templates/: adapter_template.cpp
.claude/workflows/: add_adapter.md  add_gtest.md  add_interface.md  add_proto.md  ci_setup.md  integration_check.md  new_component.md  realtime_review.md  release_checklist.md  repo_bootstrap.md  sil_integration.md
src/component/: CMakeLists.txt
src/platform/autosar/: CMakeLists.txt
src/platform/orin/: README.md
src/platform/sil/: CMakeLists.txt
src/platform/standalone/: CMakeLists.txt
src/project/: README.md
